--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
-    "sql": "^0.78.0"
+    "sql": "^0.78.0",
+    "sqlite3": "^5.1.7"
   }
 }
